2008-02-04  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>
	* src/libinteg/integ-IN.c (int_intg + others): add intg
	* src/libinteg/dqags.f: re-introduce author names
        * man/src/misc/intg.tex: intg man page
	
2008-01-21  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* src/libfft/fft-IN.c: add new fft interfaces (fftnew,
	ifftnew, fft2new, ifft2new) available both with fftw
	and fftpack use.
	* tests/fftnew.tst: more complete tests for fft.
	* src/objects/Datas.c: add a %fftw variable.
	* src/objects/IVect.c, src/objects/IVectObj.c: new
	functions for implicit vectors (experimental).

2008-01-18  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* bug 7 for parsing n-arry operators mixed with comments.
	The comments are lost in the parsed struture.
	* new versions of the test classes classa, classb, classaref,
	classbref.
	
2008-01-14  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* src/libspmf/convhull2d.c (nsp_convhull2d):
	add convhull

2008-01-11  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* macros/miscellaneous/nextpow2_m.sci:
	add nextpow2

2008-01-11  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* src/objects/MatOps.c (nsp_mat_cross): 
	create a "high level" nsp_mat_cross

2008-01-10  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* src/objects/MatOps.c (nsp_mat_dot): 
	* src/objects/MatObj.c (int_mat_dot): 
	add the dot function using various nsp_XXXXdot utilities
	to complete ddot and zdot BLAS function. These ones
	are in src/zcalelm/matutil.c.

2008-01-09  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* src/interp/Eval.c 
	* src/objects/Datas.c 
	changes the way $ is evaluated. Changing $ should 
	be forbiden and should be added. 

		
2008-01-09  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* src/objects/MatObj.c:
	add cross function (basic routines being in matutil)

2008-01-07    <bruno.pincon@iecn.u-nancy.fr>
	* src/librand:
	add several new probability distributions
	for random generation (see the grand help page)
	